--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -7,7 +7,7 @@ ar:
         message: NOTRANSLATE
         name: NOTRANSLATE
       offer:
-        organizations: 
+        organizations: منظمات
       search_location:
         latitude: NOTRANSLATE
         longitude: NOTRANSLATE
@@ -23,7 +23,7 @@ ar:
       subscription: NOTRANSLATE
       trait_filter:
         identifier:
-          anonymous: 
+          anonymous: مجهول
       update_request: NOTRANSLATE
   anonymous: 
   arabisch: 
@@ -887,20 +887,16 @@ ar:
           لذلك سجل عنوان بريدك الإليكتروني هنا
       nav_lang:
         legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
-        title: |2-
-           ترجمة آلية!
+        title: |-
+          ترجمة آلية!
           <br><br>
-          بعض النصوص في كلارات مترجمة عن طريق جوجل. هذه النصوص تبدو أحياناً غريبة أو بها أخطاء لغوية. لكننا نقوم حالياً بتحسين الترجمة.
+          بعض النصوص في كلارات مترجمة عن طريق جوجل. هذه النصوص تبدو أحياناً غريبة أو بها أخطاء لغوية. لكننا نعمل بشكل دائم على تحسين الترجمة عن طريق مترجمين.
       navigation:
         category_headline: أو البحث عن طريق التصنيف
         claim:
-          family: 'عروض دعم للأطفال؛ الشبان و الأسرة
-
-'
+          family: مساعدة للأطفال والمراهقين و الأسرة
           main: الحصول على المساعدة ببساطة
-          refugees: 'عروض دعم للآجئين
-
-'
+          refugees: مساعدة للآجئين
       top_bar:
         german_content_warning: إختر لغتك
         languages:
@@ -916,6 +912,7 @@ ar:
           desktop:
             family: إلي كلارات اللاجئين ›
             refugees: إلى كلارات الأسرة ›
+            2017-07-17, visits=2: 
           mobile:
             home:
               family: إلى <span class="top-bar__emphasis">كلارات الأسرة</span> الصفحة الرئيسية
@@ -923,6 +920,7 @@ ar:
             switch:
               family: إلى <span class="top-bar__emphasis">كلارات اللاجئين</span> تحول
               refugees: إلى <span class="top-bar__emphasis">كلارات الأسرة</span> تحول
+              2017-07-17, visits=2: 
         title: ترجمة فورية
   offer:
     stamp:
@@ -1018,10 +1016,10 @@ ar:
       speaking: في أي لغة تقدم لك المساعدة؟
       trait_filters:
         explanation:
-          accessibility: 
-          anonymous: 
+          accessibility: هذا يعني أنه يمكنك هنا التنقل بسهولة بالكرسي المتحرك أو بعربة الأطفال.
+          anonymous: هذا يعني أنه لا يجب عليك ذكر إسمك.
           charged: 
-          confidential: 
+          confidential: هذا يعني أن الموظفون سوف يحتفظون بكل ما تقوله سراً.
           day_and_night: 
           free: 
         title:
@@ -1034,7 +1032,7 @@ ar:
           family_parents: 
           family_relatives: 
           free: مجاني
-      trait_filters_headline: 
+      trait_filters_headline: مزيد من المعلومات
       website_section:
         internet_presence: أين تجد المزيد من المعلومات في النت؟
         websites:
@@ -1055,7 +1053,7 @@ ar:
         code_word: هكذا تسمى المساعدة لدى مقدم الدعم.
         heading: ما هو الموضوع؟
         offertaxonomy:
-          heading: 
+          heading: الموظفون على دراية بهذه الموضوعات
       who: أين يمكنك أن تحصل على هذه المساعدة؟
       who_contact_people:
         dr: ".د"
@@ -1081,8 +1079,8 @@ ar:
       time_frame: "%{open} - %{close}"
   organizations:
     show:
-      headline-offers--family: عروض دعم للأطفال؛ الشبان و الأسرة
-      headline-offers--refugees: عروض دعم للآجئين
+      headline-offers--family: مساعدة للأطفال والمراهقين و الأسرة
+      headline-offers--refugees: مساعدة للآجئين
       offers_all: ما هي المساعدة التي تقدمها المنظمة؟
       where: أين تجد المنظمة؟
       who: ماذا تفعل المنظمة؟
@@ -1134,20 +1132,20 @@ ar:
       magdalena: 'درست مجالات مختلفة من دراسات أمريكا اللاتينية. هذا يعني أنها تعرف الكثير عن الثقافة والسياسة في أمريكا اللاتينية. هي قادرة على التخطيط والتنظيم في العمل. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Summer Breeze ل. CocoRosie.  '
       marcus: مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي Hysteria ل. MUSE
       marie: باحثة في مجال السلام والصراع. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. هي قادرة على تجميع المعلومات وترتيبها بشكل سريع. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Move On Up ل. Curtis Mayfield..
-      meta_description: 
+      meta_description: هذا هو فريق عمل قائمة المساعدات في ألمانيا. أكثر من ٤٠ موظف يعملون يومياً؛ لكي تجد المساعدات بسهولة.
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي Digital Love ل.Daft Punk.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
       nathalie: درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي Me in You ل.Convenience.
-      nicole: 
+      nicole: درست اللغة المجرية. يمكنها برمجة صفحات الإنترنت. دائماً لديها أفكار سريعة من أجل حل المشاكل. في كلارات هي عضوة بفريق ال  IT. أغنيتها المفضلة هي Disorder لـ Joy Division .
       nils: خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي Jein ل. Fettes Brot.
-      omar: درس علوم الكمبيوتر. يمكنه برمجة صفحات الإنترنت بشكل جيداً وفهم الأشياء المعقدة بسرعة. في كلارات هو عضو بفريق تكنولوجيا المعلومات آي تي. أغنيته المفضلة هي Nothing Else Matters ل. Metallica.
+      omar: درس علوم الكمبيوتر. يمكنه برمجة صفحات الإنترنت بشكل جيداً وفهم الأشياء المعقدة بسرعة. في كلارات هو عضو بفريق التسويق. أغنيته المفضلة هي Nothing Else Matters ل. Metallica.
       patrick: 'درس التاريخ والسياسة. هو يعرف الكثير خاصة عن دولة جاميكا. هو قادر على فهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث. أغنيته المفضلة هي Kingston Be Wise ل. Protoje   '
       philipp: درس التاريخ والسياسة والحقوق. يعرف الكثير عن السياسة والمجتمع. يمكنه فهم الأشياء المعقدة. في كلارات هو عضو بالفريق البحثي. أغنيته المفضلة هي This Is Our Science ل. Astronautalis.
       sabine: هي أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. وهي توضح لنا قوانين اللجوء الألمانية. أغنيتها المفضلة هي Vesna ل.Kino.
       sophie: درست إدارة غير ربحية. يمكنها التنظيم جيداً. كما أنها تدرك بسرعة ما هو مهم للعمل. في كلارات هي عضوة في فريق البحث. وهي تكتشف من يستخدم كلارات وكيف. أغنيتها المفضلة هي Lost ل. Frank Ocean.
       stefan: خبير ثقافي. هذا يعني أنه يعرف الكثير عن الثقافة والمجتمع. يمكنه إثارة إهتمام الناس لشئ ما ,هو من إبتكر فكرة كلارات. أغنيته المفضلة هي Riders On The Storm ل. The Doors.
       text: "كلارات هو مشروع تابع لمؤسسة بنكيزير الخيرية للمستقبل  (www.benckiser-stiftung.org) .\n نحن ننهض من خلال مؤسسة بنكيزيز منذ عدة سنوات بمشروعات فعالة لدعم الأطفال والشباب. \nوكنا نلاحظ دائما آنه من الصعب معرفة إذا ما كان هناك عروض للدعم. لذلك أصبح من الواضح لدينا:\n إذا كان بالفعل من الصعب علينا كخبراء أن نحصل على فكرة عامة؛ فكيف سيكون الأمر بالنسبة للأطفال والشباب والأسرة الذين يحتاجون بالفعل للمساعدة؟ \nأو بالنسبة للاجئين الذين في الأصل ليس لهم معرفة بإلمانيا بعد؟ \nفكانت الإجابة على هذه الإسئلة هي: صعب جدا! من هنا جاءت الفكرة لتولد كلارات: \n لإيجاد المساعدةبسهولة للأسرة عن طريق كلارات الأسرة وللاجئين عن طريق كلارات اللاجئين."
-      tian: 
+      tian: درست إقتصاد. لديها دائماً نظرة شاملة ويمكنها التعامل جيداً مع الأرقام. في كلارات هي عضوة بفريق البحث. وتعتني بجودة العمل. أغنيتها المفضلة هي Supergirl لـ Reamonn.
       tine: أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد كتابة القصص. في كلارات هي عضوة في فريق البحث ومختصة بلغة كلارات. أغنيتها المفضلة هي Survive It ل. Ghostpoet.
       title: معلومات عن فريق عمل كلارات
       verena: درست علوم الأجناس. هذا يعني أنها تعرف الكثير عن الأجناس المختلفة وكذلك عن مجتمعنا. يمكنها تنسيق الأمور وترتيبها. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي Metropolis ل. Neonschwarz.
@@ -1205,18 +1203,18 @@ ar:
         heading: كيف تعمل كلارات؟
         text: أكتب المشكلة التي تحتاح مساعدة في حلها, او التي تقلقك. يمكنك أيضا أن تختار من الموضوعات الموجودة لدينا, فتري في الحال كل العروض التي تقدم الدعم بالقرب منك. وكذلك تعرف أيضا, كيف تحصل على المساعدة و بأي  وسيلة إتصال, سواء عن طريق التليفون أو إرسال إيميل أو الذهاب الي عنوان ما
       meta_description:
-        family: |-
-          "مع كلارات العائلة تجد بسهولة المساعدة.
-          عروض الدعم للاطفال، الشباب، والعائلات. عبر الانترنت. حالياً. في كل برلين."
+        family: مع  clarat family تجد المساعدة بسهولة. فيها عروض دعم للاطفال والمراهقين والأسر. قائمة شاملة ومتعددة اللغات. في كل برلين وفي أنحاء ألمانيا."
         refugees: |-
-          "مع كلارات اللاجئين تجد بسهولة المساعدة.
-          عروض الدعم للاجئين. عبر الانترنت. حالياً. متعدد اللغات. في كل المانيا."
+          مع clarat refugees  تجد المساعدة بسهولة.
+          فيها عروض دعم للاجئين. قائمة شاملة ومتعددة اللغات. بالقرب منك وفي كل المانيا.
+        2017-07-17, visits=2: 
       meta_title:
         family: إيجاد المساعدة ببساطة | كلارات العائلة
         refugees: إيجاد المساعدة ببساطة | كلارات اللاجئين
+        2017-07-17, visits=2: 
       title:
-        family: عروض دعم للأطفال والشبان والأسر
-        refugees: عروض مساعدة للاجئين
+        family: مساعدة للأطفال والمراهقين والأسر
+        refugees: " مساعدة للاجئين"
       whom:
         heading: كلارات من أجل من؟
         text: 'كلارات للجميع, حيث إن كلارات الأسرة موجهة إلي الأطفال والشباب والأسر و كلارات اللاجئين موجهة للاجئين. فهنا تجد مساعدة إذا كان لديك سؤال أو مشكلة خاصة بك أو بأسرتك أو بأصدقائك أو لأي شخص آخرتعرفه وهو في حاجة لمساعدة '
@@ -1301,7 +1299,7 @@ ar:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      meta_description: 'تقوم كلارات بالإرشاد لشبكة ضخمة من خدمات الدعم في المانيا. للاطفال، الشباب، العائلات واللاجئين. عبر الانترنت. ببساطة. في الجوار. '
+      meta_description: clarat.org تعرض لك ما هي المساعدات المتاحة في ألمانيا للاطفال والمراهقين والأسر واللاجئين. عبر الانترنت. بالقرب منك.
       meta_title: كلارات توضح | كلارات
       title: إختر قسم كلارات الذي يخصك
     shared:
@@ -1321,9 +1319,9 @@ ar:
     faq: أسئلة-شائعة
     fr: 
     haeufige-fragen: أسئلة-شائعة
-    home: 
+    home: الصفحة الرئيسية
     impressum: هيئة التحرير
-    kontakt: 
+    kontakt: إتصال
     liste: القائمة
     liste-de-services: قائمة الخدمات
     new: جديد
