--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -991,13 +991,13 @@ ru:
             ты что-либо заметил, что нам стоит улучшить? Или что-то
             рабоатет не правильно? Тогда
         popup:
-          button: 
+          button: Да, пожалуйста
           email_placeholder: E-Mail адрес *
-          footer: 
-          headline: 
+          footer: Твое имя и адрес электронной почты будут использованы только в цели установления контакта. Ты не подписываешься на электронную рассылку и твои данные не будут переданы третьим лицам.
+          headline: 20 евро за твое мнение
           message: Ich möchte an der Umfrage teilnehmen
           name_placeholder: Имя *
-          text: 
+          text: Скажите, что мы можем улучшить. Или то, что тебе действительно нравится. Мы будем рады созвониться с тобой. Можно выслать тебе E-Mail с деталями?
         unavailable_location_modal: "Для твоего местонахождения на данный момент у clarat есть только\nпомощь по телефону или он-лайн. Это значит, тебе помогут по телефону \nили по интернету. Например по E-Mail или в чате. Мы тебе обязательно\nсообщим, как только у clarat появится для тебя помощь рядом с тобой.\nДля этого введи здесь свой E-Mail адрес.\n"
       nav_lang:
         legal_title: Юридический текст clarat можно читать только на немецком языке.
@@ -1027,6 +1027,7 @@ ru:
           desktop:
             family: "‹ к clarat refugees"
             refugees: "‹ к clarat family"
+            2017-07-17, visits=2: 
           mobile:
             home:
               family: 'к Стартовой странице <span class="top-bar__emphasis">clarat family</span> '
@@ -1034,6 +1035,7 @@ ru:
             switch:
               family: перейти к <span class="top-bar__emphasis">clarat refugees</span>
               refugees: перейти к к <span class="top-bar__emphasis">clarat family</span>
+              2017-07-17, visits=2: 
         title: Автоматический перевод!
   offer:
     stamp:
@@ -1316,9 +1318,11 @@ ru:
       meta_description:
         family: 'С помощью clarat family ты быстро найдешь поддержку. Для детей, молодежи и семей. В интернете. '
         refugees: 
+        2017-07-17, visits=2: 
       meta_title:
         family: 
         refugees: 
+        2017-07-17, visits=2: 
       title:
         family: Предложения помощи для детей, молодежи и семей
         refugees: Предложения помощи для беженцев
