--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -163,7 +163,7 @@ de:
             Angebote, bei denen man dir am Telefon oder im Internet hilft. Das
             heißt, per E-Mail, im Chat oder im Forum. Viele andere Angebote kannst
             du genau da nutzen, wo du wohnst. Bei <b>clarat refugees</b> findest du
-            bald Angebote für viele Großstädte in Deutschland. Im Moment sind das Berlin, Köln und Düsseldorf. Bei <b>clarat family</b> haben wir in Berlin
+            bald Angebote für viele Großstädte in Deutschland. Im Moment sind das Berlin, Hamburg, München, Dortmund, Düsseldorf, Köln, Nürnberg und Stuttgart. Bei <b>clarat family</b> haben wir in Berlin
             angefangen. Hier gibt es sehr viele Angebote. Aber wir sammeln weiter.
             Bald auch für weitere, große Städte in Deutschland.
           question: Gibt es clarat für ganz Deutschland?
@@ -1392,17 +1392,17 @@ de:
           tr: Türkçe
         section_link:
           desktop:
+            2017-07-17, visits=2: 
             family: "‹ zu clarat refugees"
             refugees: "‹ zu clarat family"
-            2017-07-17, visits=2: 
           mobile:
             home:
               family: zur <span class="top-bar__emphasis">clarat family</span> Startseite
               refugees: zur <span class="top-bar__emphasis">clarat refugees</span> Startseite
             switch:
+              2017-07-17, visits=2: 
               family: zu <span class="top-bar__emphasis">clarat refugees</span> wechseln
               refugees: zu <span class="top-bar__emphasis">clarat family</span> wechseln
-              2017-07-17, visits=2: 
         title: Wähle deine Sprache
   offer:
     stamp:
@@ -1729,13 +1729,13 @@ de:
           Hilfe bekommst. Also ob du anrufen oder eine E-Mail schreiben sollst.
           Oder einfach vorbeigehen kannst.
       meta_description:
+        2017-07-17, visits=2: 
         family: Mit clarat family findest Du einfach Hilfe für Kinder, Jugendliche und Familien. Übersichtlich. Mehrsprachig. In ganz Berlin. Und deutschlandweit.
         refugees: 'Mit clarat refugees findest Du einfach Hilfe für Flüchtlinge. Übersichtlich. Mehrsprachig. In deiner Nähe. Und in ganz Deutschland. '
-        2017-07-17, visits=2: 
       meta_title:
+        2017-07-17, visits=2: 
         family: Einfach Hilfe finden | clarat family
         refugees: Einfach Hilfe finden | clarat refugees
-        2017-07-17, visits=2: 
       title:
         family: Hilfe für Kinder, Jugendliche und Familien
         refugees: Hilfe für Flüchtlinge
