--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -669,6 +669,11 @@ fr:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: 
+        ewe: 
+        gej: 
+        run: 
+        xxx: 
       section:
         family: Family
         refugees: Refugees
@@ -916,6 +921,7 @@ fr:
         zza: 'Zazaki - Zazaki / Kırmancki
 
 '
+        gej: 
     shariff:
       share_label: Partager
     single_search_result:
