--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -717,6 +717,11 @@ pl:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: 
+        ewe: 
+        gej: 
+        run: 
+        xxx: 
       section:
         family: Family
         refugees: Refugees
@@ -960,6 +965,7 @@ pl:
         xxx: Towarzyszący język migowy - speech-acc. gestures
         zho: Język chiński - 普通话 / 普通話
         zza: Język zazaki - Zazaki / Kırmancki
+        gej: 
     shariff:
       share_label: Podziel
     single_search_result:
