Change blog link to clarat plus link

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -868,6 +868,7 @@ ar:
         twitter:
           anchor: تويتر
           href: https://twitter.com/claratpunktorg
+        plus: 
       modal:
         beta_modal:
           link: ارسل لنا ببساطة رسالة بريد إليكتروني
