--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1353,6 +1353,7 @@ de:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: clarat plus
       modal:
         beta_modal:
           link: schreibe uns einfach eine Nachricht.
