--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -924,6 +924,7 @@ en:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: clarat plus
       modal:
         beta_modal:
           link: write us a message.
