--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -935,6 +935,7 @@ fa:
         twitter:
           anchor: توییتر
           href: https://twitter.com/claratpunktorg
+        plus: 
       modal:
         beta_modal:
           link: برای ما پیغام بنویسید
