--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -960,6 +960,7 @@ fr:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: 
       modal:
         beta_modal:
           link: écris-nous tout simplement un message
