--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -987,6 +987,7 @@ ru:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: 
       modal:
         beta_modal:
           link: просто напиши нам E-Mail.
