--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -877,6 +877,7 @@ tr:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: 
       modal:
         beta_modal:
           link: bize mesaj gönder.
