--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1004,6 +1004,7 @@ pl:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: 
       modal:
         beta_modal:
           link: po prostu napisz do nas wiadomość
