--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1039,6 +1039,11 @@ de:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: Dje
+        ewe: Ewe
+        gej: Gej
+        run: Run
+        xxx: Xxx
       section:
         family: Family
         refugees: Refugees
