--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -632,6 +632,11 @@ fa:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: 
+        ewe: 
+        gej: 
+        run: 
+        xxx: 
       section:
         family: خانواده
         refugees: پناهندگان
