--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -717,6 +717,11 @@ pl:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: 
+        ewe: 
+        gej: 
+        run: 
+        xxx: 
       section:
         family: Family
         refugees: Refugees
