--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -593,6 +593,11 @@ tr:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: 
+        ewe: 
+        gej: 
+        run: 
+        xxx: 
       section:
         family: Family
         refugees: Refugees
