--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -575,6 +575,11 @@ ar:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: 
+        ewe: 
+        gej: 
+        run: 
+        xxx: 
       section:
         family: Family
         refugees: Refugees
