--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -669,6 +669,11 @@ fr:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: 
+        ewe: 
+        gej: 
+        run: 
+        xxx: 
       section:
         family: Family
         refugees: Refugees
