--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -693,6 +693,11 @@ ru:
         wol: Wol
         zho: Zho
         zza: Zza
+        dje: 
+        ewe: 
+        gej: 
+        run: 
+        xxx: 
       section:
         family: Family
         refugees: Refugees
