--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -72,7 +72,7 @@ de:
           link_1:
             name: Film
             target: _blank
-            url: http://blog.clarat.org/einfach-hilfe-finden-unser-projekt-clarat-im-kurzfilm/
+            url: https://plus.clarat.org/magazin/clarat.org-kurz-erklart/
             var: link_to_family_movie
           question: Was ist clarat?
         question_10:
@@ -1348,6 +1348,7 @@ de:
           anchor: Google+
           href: https://plus.google.com/110429028641743127592/about
         impressum: Impressum
+        plus: clarat plus
         privacy: Datenschutzhinweise
         tos: Rechtliche Hinweise
         twitter:
