--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -48,7 +48,7 @@ fa:
           link_1:
             name: فیلم
             target: _blank
-            url: ttp://blog.clarat.org/einfach-hilfe-finden-unser-projekt-clarat-im-kurzfilm/
+            url: https://plus.clarat.org/magazin/clarat.org-kurz-erklart/
             var: link_to_family_movie
           question: "  clarat چیست؟"
         question_10:
@@ -930,6 +930,7 @@ fa:
           anchor: گوگل پلاس
           href: https://plus.google.com/110429028641743127592/about
         impressum: اطلاعات کلی شرکت
+        plus: clarat plus
         privacy: نکات حفاظت از اطلاعات
         tos: نکات حقوقی
         twitter:
