farsi movie url (in FAQs) from localeapp

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -48,7 +48,7 @@ fa:
           link_1:
             name: فیلم
             target: _blank
-            url: https://plus.clarat.org/magazin/clarat.org-kurz-erklart/
+            url: https://plus.clarat.org/magazin/clarat.org-auf-farsi-erklart/
             var: link_to_family_movie
           question: "  clarat چیست؟"
         question_10:
