--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -61,7 +61,7 @@ ru:
           link_1:
             name: фильме
             target: _blank
-            url: http://blog.clarat.org/einfach-hilfe-finden-unser-projekt-clarat-im-kurzfilm/
+            url: https://plus.clarat.org/magazin/clarat.org-kurz-erklart/
             var: link_to_family_movie
           question: Что значит clarat?
         question_10:
@@ -987,6 +987,7 @@ ru:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: clarat plus
       modal:
         beta_modal:
           link: просто напиши нам E-Mail.
