--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -48,7 +48,7 @@ fa:
           link_1:
             name: فیلم
             target: _blank
-            url: ttp://blog.clarat.org/einfach-hilfe-finden-unser-projekt-clarat-im-kurzfilm/
+            url: https://plus.clarat.org/magazin/clarat.org-auf-farsi-erklart/
             var: link_to_family_movie
           question: "  clarat چیست؟"
         question_10:
@@ -935,6 +935,7 @@ fa:
         twitter:
           anchor: توییتر
           href: https://twitter.com/claratpunktorg
+        plus: clarat plus
       modal:
         beta_modal:
           link: برای ما پیغام بنویسید
