--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -59,7 +59,7 @@ fr:
           link_1:
             name: film
             target: _blank
-            url: http://blog.clarat.org/einfach-hilfe-finden-unser-projekt-clarat-im-kurzfilm/
+            url: https://plus.clarat.org/magazin/clarat.org-kurz-erklart/
             var: link_to_family_movie
           question: Clarat, c’est quoi?
         question_10:
@@ -960,6 +960,7 @@ fr:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: clarat plus
       modal:
         beta_modal:
           link: écris-nous tout simplement un message
