--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -60,7 +60,7 @@ pl:
           link_1:
             name: film
             target: _blank
-            url: http://blog.clarat.org/einfach-hilfe-finden-unser-projekt-clarat-im-kurzfilm/
+            url: https://plus.clarat.org/magazin/clarat.org-kurz-erklart/
             var: link_to_family_movie
           question: Co to jest clarat?
         question_10:
@@ -1004,6 +1004,7 @@ pl:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+        plus: clarat plus
       modal:
         beta_modal:
           link: po prostu napisz do nas wiadomość
