--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1377,6 +1377,7 @@ de:
           Zum Beispiel per E-Mail oder in einem Chat. Wir geben dir gerne
           Bescheid, sobald es bei clarat auch Hilfe in deiner Nähe gibt.
           Trage dazu deine E-Mail-Adresse hier ein.
+        send: 
       nav_lang:
         legal_title: 
         title: 
